# Quiz-Game-Collection

./: .gitignore  GIT_CLEANUP_GUIDE.md  LICENSE.md  MOBILE_PORT_SUMMARY.md  README.md  pyproject.toml
Backend/: README.md
docs/: DOCUMENTATION_INDEX.md  HOW_TO_START_SERVERS.md  MOBILE_SCRIPTS_GUIDE.md  SERVER_QUICK_REFERENCE.md
docs/mobile/: NETWORK_TROUBLESHOOTING.md  QUICK_START_MOBILE.md  README.md  TROUBLESHOOTING.md
games/truth_or_dare_app/: __init__.py  app.py  cli.py
games/truth_or_dare_app/ui/: THEME_CUSTOMIZATION.md  __init__.py  gui_app.py  themes.py
mobile/: DEPLOYMENT.md
mobile/apps/truth-or-dare/: App-minimal.js  App.js  app.json  package-lock.json  package.json
mobile/backend/: api.py  requirements.txt  requirements_simple.txt  simple_api.py
mobile/shared/api/: GameAPI.js
mobile/shared/assets/: AssetManager.js
question-pipeline/data/storage/: migration.py  question_database.py  sqlite_storage.py
question_pipeline/configs/: __init__.py  game_configs.py  game_mode_handlers.py
question_pipeline/core/: __init__.py  engine.py
question_pipeline/data/filters/: __init__.py  base_filter.py  behavior_filters.py  (+4 more)
question_pipeline/factory/: __init__.py  app_factory.py
question_pipeline/objects/: question.py
question_pipeline/utils/: exceptions.py
scripts/: build_executable.py  diagnose_mobile_setup.py  fix_nodejs_path.py  manual_mobile_setup.py  run_truth_or_dare_cli.py  run_truth_or_dare_gui.py  setup_mobile_dev.py  start_simple_mobile_test.py
tests/: app.py  test_filter_system.py  test_gui_app.py  test_truth_or_dare_app.py
(+10 files in other folders)
